Implement advanced game logic and expand test coverage
Added new logic for evaluating card sequences and handling special cases in `Deck` and `ZvanjaValidator`. Introduced `FriendshipServiceTest` and `MatchServiceTest` to ensure functionality of match and friendship workflows. Refactored `BelotGameTest` to validate game initialization, turn order, and dealer selection.

not complete