@@ -1,6 +1,7 @@
 package backend.belatro;
 
 import backend.belatro.pojo.gamelogic.BelotGame;
+import backend.belatro.pojo.gamelogic.Bid;
 import backend.belatro.pojo.gamelogic.Player;
 import backend.belatro.pojo.gamelogic.Team;
 import backend.belatro.pojo.gamelogic.enums.Boja;
@@ -8,93 +9,91 @@ import backend.belatro.pojo.gamelogic.enums.GameState;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
-
 
 public class BelotGameTest {
 
     private BelotGame game;
     private Team teamA;
     private Team teamB;
-    private Player player1;
-    private Player player2;
-    private Player player3;
-    private Player player4;
+    private Player playerA1, playerA2;
+    private Player playerB1, playerB2;
 
     @BeforeEach
-    void setUp() {
-        // Create players
-        player1 = new Player("player1");
-        player2 = new Player("player2");
-        player3 = new Player("player3");
-        player4 = new Player("player4");
+    public void setup() {
+        // Create players (assumed constructor takes a player ID)
+        playerA1 = new Player("A1");
+        playerA2 = new Player("A2");
+        playerB1 = new Player("B1");
+        playerB2 = new Player("B2");
 
-        // Create teams
-        teamA = new Team(Arrays.asList(player1, player3));
-        teamB = new Team(Arrays.asList(player2, player4));
+        // Create teams (assumed constructor takes an ID and a list of players)
+        teamA = new Team(List.of(playerA1, playerA2));
+        teamB = new Team(List.of(playerB1, playerB2));
 
-        // Create game
+        // Create a new game instance
         game = new BelotGame("game1", teamA, teamB);
     }
 
     @Test
-    void testGameInitialization() {
-        // Verify initial state
-        assertEquals("game1", game.getGameId());
-        assertEquals(teamA, game.getTeamA());
-        assertEquals(teamB, game.getTeamB());
-        assertEquals(GameState.INITIALIZED, game.getGameState());
-        assertEquals(4, game.getTurnOrder().size());
-        assertTrue(game.getCompletedTricks().isEmpty());
-    }
-
-    @Test
-    void testSelectDealer() {
-        game.selectDealer();
-
-        // Verify dealer was selected
-        assertNotNull(game.getDealer());
-
-        // Verify current lead is set (player after dealer)
-        assertNotNull(game.getCurrentLead());
-
-        // Verify turn order is rearranged to start with player after dealer
-        assertEquals(game.getCurrentLead(), game.getTurnOrder().get(0));
-    }
-
-    @Test
-    void testStartGame() {
-        // Start the game
+    public void testStartGame() {
+        // Start the game; this should select a dealer, shuffle the deck, and deal the initial cards.
         game.startGame();
 
-        // Verify state changes
-        assertEquals(GameState.TRUMP_CALLING, game.getGameState());
-        assertNotNull(game.getDealer());
-        assertNotNull(game.getCurrentLead());
-        assertEquals(2, game.getTalon().size());
+        // After starting, the game should be in the BIDDING state.
+        assertEquals(GameState.BIDDING, game.getGameState(), "Game state should be BIDDING after starting");
 
-        // Verify each player has 6 cards
-        for (Player player : game.getTurnOrder()) {
-            assertEquals(6, player.getHand().size());
+        // Check that the talon has 2 cards.
+        assertEquals(2, game.getTalon().size(), "Talon should contain 2 cards");
+
+        // Verify that every player’s hand has been dealt 6 cards.
+        for (Player player : List.of(playerA1, playerA2, playerB1, playerB2)) {
+            assertEquals(6, player.getHand().size(), "Player " + player.getId() + " should have 6 cards initially");
+        }
+
+        // Check that both a dealer and a current player (lead) have been set.
+        assertNotNull(game.getDealer(), "A dealer should be assigned");
+        assertNotNull(game.getCurrentPlayer(), "A current player should be set");
+    }
+
+    @Test
+    public void testSuccessfulBidTrumpCall() {
+        game.startGame();
+
+        // Simulate a trump call from the current bidder.
+        Player currentBidder = game.getCurrentPlayer();
+        Bid trumpCallBid = Bid.callTrump(currentBidder, Boja.HERC);
+
+        boolean bidProcessed = game.placeBid(trumpCallBid);
+        assertTrue(bidProcessed, "The trump call bid should be processed successfully");
+
+        // After a trump call, the game should move to the PLAYING state.
+        assertEquals(GameState.PLAYING, game.getGameState(), "Game state should be PLAYING after a successful trump call");
+
+        // Validate that the trump suit is set correctly.
+        assertEquals(Boja.HERC, game.getTrump(), "The trump should be set to HEARTS");
+
+        // After dealing the remaining cards, each player’s hand should now have 8 cards.
+        for (Player player : List.of(playerA1, playerA2, playerB1, playerB2)) {
+            assertEquals(8, player.getHand().size(), "Player " + player.getId() + " should have 8 cards after trump is called");
         }
     }
 
     @Test
-    void testCallTrumpInWrongState() {
-        // Game is in INITIALIZED state
-        assertThrows(IllegalStateException.class, () -> {
-            game.callTrump(player1, Boja.HERC);
-        });
-    }
-
-    @Test
-    void testGetGameStateDescription() {
-        assertEquals("Game initialized", game.getGameStateDescription());
-
-        // Change state and verify description updates
+    public void testPassBidAndTurnRotation() {
         game.startGame();
-        assertEquals("Waiting for trump to be called", game.getGameStateDescription());
+
+        // Simulate the current player passing.
+        Player currentBidder = game.getCurrentPlayer();
+        Bid passBid = Bid.pass(currentBidder);
+
+        boolean bidProcessed = game.placeBid(passBid);
+        assertTrue(bidProcessed, "The pass bid should be processed");
+
+        // After a pass, the turn should rotate to the next player.
+        Player newBidder = game.getCurrentPlayer();
+        assertNotEquals(currentBidder, newBidder, "Turn should move to the next player after a pass");
     }
 }
